# pre-commit

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  Makefile  README.md  black.toml  changelog.md  changelog.py  docker-compose.yml  formater.py  generate_changelog.py  setup.cfg  tox.ini
.github/workflows/: pythonpackage.yml
changelog/: v0.1.0.yaml  v0.1.1.yaml  v0.1.2.yaml  v0.1.3.yaml  v0.1.4.yaml  v0.1.5.yaml  v0.2.0.yaml
changelog/archives/: v0.1.0.md  v0.1.1  v0.1.2  v0.1.2.md  v0.1.3.md  v0.1.4.md
docs/: conf.py
helper/: markdown.py
pre_commit_hook/: generate_changelog.py
pre_commit_hook_old/: changelog.py  formater.py  generate_changelog.py
pre_commit_hook_old/helper/: markdown.py
tests/dataset/markdown/: simple_valid.md  sublist_valid.md
tests/dataset/yaml/: simple_valid.yaml  sublist_invalid.yaml  sublist_valid.yaml
