[metadata]
name = pre_commit_hooks_changelog
version = 0.1.0
description = generate Changelog.md from yaml files in changelog folder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://https://github.com/chrysa/pre-commit-hooks-changelog
author = Anthony Greau
author_email = greau.anthony@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    ruamel.yaml>=0.16.5
python_requires = >=3.7

[options.entry_points]
console_scripts =
    pre-commit-generate-changelog = generate_changelog.main:main

[options.package_data]
generate_changelog.resources =
    *.tar.gz
    empty_template_*
    hook-tmpl

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
